# CatPick

./: .gitignore  Dockerfile  README.md  config.py  docker-compose.yaml  install.sh  main.py  pyproject.toml  requirements.txt  telegram_auth.py  timer.py
.github/workflows/: main.yml
catpick/: __main__.py  config.py  main.py
docker/: crontab  docker-entrypoint.sh
